<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWarning"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:contentDescription="@string/warningsign"
                android:id="@+id/imageViewWarning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:scaleType="centerCrop"
                android:src="@drawable/warning_foreground" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/warning"
            android:textColor="#FA0202"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:background="#D50000"
        android:layout_height="2.5dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:text="@string/exit_game_dialog"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonYesDialog"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:background="@drawable/buttons_dialog"
            android:text="@string/yes_exit_dia"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNoDialog"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/buttons_dialog"
            android:textSize="24sp"
            android:text="@string/no_exit_dia"
            android:layout_height="50dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>