<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".startquiz.game_logic.QuizLogic">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWarning"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:contentDescription="@string/warningsign"
                android:id="@+id/imageViewWarning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:scaleType="center"
                android:src="@drawable/score_icon_logic_quiz_foreground" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewScore23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/your_quiz"
            android:textColor="#E8DC02"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:background="#E8DC02"
        android:layout_height="2.5dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <EditText
        android:id="@+id/editTextNameOfQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="start|center_vertical"
        android:hint="@string/name_of_quiz"
        android:background="@drawable/button_background_yellow_border"
        android:textColor="#FFFFFF"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editTextNumberOfQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="start|center_vertical"
        android:inputType="numberDecimal"
        android:background="@drawable/button_background_yellow_border"
        android:hint="@string/number_of_questions"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameOfQuiz" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_background_yellow_border"
            android:textSize="24sp"
            android:text="@string/cancel"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOkDialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_background_yellow_border"
            android:textSize="24sp"
            android:text="@string/ok"
            android:layout_height="50dp" />

    </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>